--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 </head>
 <body>
   
-  <div class="game-area">
+
+  <div class="minor-area">
     <div class="score">0</div>
+    <div class="instructions">
+      <!-- add some player instructions here  -->
+    </div>
+    <button id='startBtn'>Start</button>
+  </div>
+
+  <div class="game-area">
+    
+    <div class="cloud-bg"></div>
 
     <div class="bird"></div>
 
@@ -22,9 +32,6 @@
       <div class="hole"></div>
     </div>
 
-    <div class="tube tube-3">
-      <div class="hole"></div>
-    </div>
 
   </div>
 
